K1J-1526: Convert JAX-RS Stubs to Spring MVC (#483)
Co-authored-by: cigerhed <christoffer.sigerhed@soprasteria.com>